# eth_wallet

./: .gitignore  Cargo.toml  README.md
assets/: schema.sql
assets/addrs/cache/: solidity-files-cache.json
assets/addrs/notes/: economics.txt  essay.txt  plan.txt
assets/addrs/src/: Auction.sol  Ballot.sol  Coin.sol  Group.sol  Store.sol
assets/addrs/src/utils/: Admin.sol  Types.sol
src/: main.rs
src/auth/: cache.rs  db.rs  mod.rs  store.rs
src/config/: mod.rs
src/crypt/: cha.rs  eip55.rs  hashes.rs  mod.rs
src/eth/: node.rs
src/handlers/: cmds.rs  mod.rs  stream.rs
src/handlers/binary/: auction.rs  basic.rs  mod.rs  multi.rs
src/handlers/json/: auction.rs  basic.rs  mod.rs  multi.rs
src/keys/: cache.rs  db.rs  mod.rs  store.rs
src/tests/: config.rs  mod.rs
src/tests/binary/: auction.rs  basic.rs  mod.rs  multis.rs  trxs.rs
src/tests/json/: auction.rs  basic.rs  multis.rs  trxs.rs
src/utils/: cache.rs  db.rs  errors.rs  mod.rs
