[package]
name = "wallet"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.1", features = ["full"] }
bip32 = "0.5.3"
bip39 = "2.2.0"
hex = "0.4.3"
k256 = "0.13.4"
rand = "0.9.2"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
base64 = "0.22.1"
tokio = { version = "1.47.1", features = ["full"] }
deadpool-sqlite = "0.12.1"
toml = "0.9.5"
serde = "1.0.219"
alloy-node-bindings = "1.0.23"
serde_json = "1.0.142"
